--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ html {
 
 body {
   background: #35c9ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 .container {
